css/nurd.less
/* ... */
@media screen and (max-device-width: 480px) {
    .balloons { display: none; }
}

.game-end-overlay-container { height: 0; left: 0; position: fixed; top: 0; text-align: center; width: 100%; }
.game-end-overlay { background: #fcfff4; font-family: Verdana; margin: 48px auto 0; padding: 22px 38px; width: 500px;
    background: -webkit-linear-gradient(top, #fcfff4 0%,#dfe5d7 40%,#b3bead 100%); }
.game-end-overlay .name { }
.game-end-overlay .score { }
.game-end-overlay .winners {  }
.game-end-overlay .winners .winner { margin-top: 6px; }
.game-end-overlay .champion { font-size: 1.6em; margin: 0 auto; }
.game-end-overlay .runner-up { font-size: 1.2em; }
.game-end-overlay .runner-up.first { }
.game-end-overlay .runner-up.second { }
.game-end-overlay .close { margin-top: 22px; }

.name-form-overlay-container { background: rgba(100, 100, 100, 0.7); height: 100%; left: 0; position: fixed; top: 0; width: 100%;
    .name-form-overlay { background: #E3F6FC; border: solid 12px white; border-radius: 12px; box-shadow: 0px 0px 26px #4F93B0; height: 250px; margin: 100px auto 0; padding: 24px; text-align: center; width: 400px;
        h3 img { width: 300px; }
        h4 { color: #666; font-size: 18px; margin: 12px auto 0; width: 330px; }
        #name-change-form { margin-top: 24px;
            label { font-size: 22px; }
            #name-field { border: solid 3px #BFEAF4; font-size: 22px; margin-left: 12px; padding: 4px; width: 300px; }
            #change-name-btn { .high-impact-button-gradient(); color: #E3F6FC; font-size: 24px; margin-top: 12px; padding: 6px 24px; }
        }
    }
}

.instructions-overlay-container {
    h2 { font-size: 1.7em; }
    h3 { font-size: 1.2em;}
    .menu {
        .menu-item {
        }
    }
    .trio { display: inline-block; height: 210px; width: 130px;
        .card {
            .card-object { }
        }
        &.false { }
    }
}


.game-controls {  }

#chat {
    font-family: arial; margin:0 auto; padding: 12px 24px ; width: 600px;
    .chat-form {
        label { font-weight: bold; }
        .msg { background: transparent; border: 0; font-size: 16px; padding: 4px; width:350px; }
    }
    .chat-msgs {
        height: 250px;
        .chat-msg {
            margin:5px 0 0;
            .sender { background:#E1F3F7; border-radius:3px; display:inline-block; margin:0 7px 0 0; padding:4px 5px; }
            .msg { display:inline-block;
                .cards { display:inline-block;
                    .card { border: solid 3px; }
                    &.set { .card { border-color:#d2ff52 #4FED44 #4FED44 #d2ff52; } }
                    &.false-set { .card { border-color:#FFA435 #e73827 #e73827 #FFA435; } }
                }
            }
        }
    }
}
#chat .chat-msgs .chat-msg .msg .cards .card { display:inline-block; .card(64px); }

.background-container { position: relative; }

@import url(/css/animations.css);
.sky { .sky-gradient(); height: 500px; left: 0; position: absolute; top: 0; width: 100%; z-index: -1; }
@media screen and (min-device-width: 481px) {
    .moon { background: url(/images/moon.png) repeat-x 0 0; background-size: 100% 100%; top: 50px; height: 70px; right: 180px; position: absolute; width: 70px; z-index: -1; }
    .cloud-1 {
        background: url(/images/cloud-1.png) repeat-x 0 0; top: 287px; height: 430px; left: 0; position: absolute; width: 100%; z-index: -1;
        -webkit-animation: cloud1 280s infinite normal;
        -webkit-animation-timing-function: linear;
    }
    .cloud-2 {
        background: url(/images/cloud-2.png) repeat-x 0 0; top: 336px; height: 381px; left: 0; position: absolute; width: 100%; z-index: -1;
        -webkit-animation: cloud2 240s infinite normal;
        -webkit-animation-timing-function: linear;
    }
    .cloud-3 {
        background: url(/images/cloud-3.png) repeat-x 0 0; top: 382px; height: 335px; left: 0; position: absolute; width: 100%; z-index: -1;
        -webkit-animation: cloud3 200s infinite normal;
        -webkit-animation-timing-function: linear;
    }
}

